# FelxiBoard

./: .gitignore  1.要件整理.md  README.md  log.md  pyproject.toml  requirements.txt  test_frontend.html  todo.md
.cursor/rules/: cursorrules.mdc
.serena/: .keep
backend/: __init__.py  app.py
backend/sample_configs/: board_quadsphere.yaml  board_rectangular.yaml  pieces_basic.yaml  rules_basic.yaml
frontend/: index.html
frontend/css/: styles.css
frontend/js/: ai.js  api.js  config.js  game.js  main.js  ui.js
scripts/: smoke_api.py  test_frontend.py  test_mvp_complete.py  test_validation.py
specifications/: 01_requirements.md  02_system_architecture.md  03_algorithm.md  04_UI_design.md  req_spec.md
specifications/design_outputs/: README.md
