[project]
name = "flexiboard"
version = "0.1.0"
description = "FlexiBoard backend (Flask + Flask-SocketIO)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "FlexiBoard Dev Team" }
]
dependencies = [
  "Flask>=3.0.0",
  "Flask-SocketIO>=5.3.6",
  "PyYAML>=6.0.1",
  "Flask-Cors>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12"
]

[project.scripts]
flexiboard = "backend.app:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = [
  "backend",
  "pyproject.toml",
  "README.md",
  "specifications",
  "todo.md",
  "log.md",
]


